ci: format pass and configuration for ci